2007-12-20 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	bug #21862: File 'bench-libm.dox' does not exist in distribution
	* doc/api/Makefile.am (EXTRA_DIST): add doc/api/bench-libm.dox.

2007-12-20  Anatoly Sokolov <aesok@post.ru>

	* configure.ac: Add 'avr35' architecture. Move AT90USB82 and 
	AT90USB162 devices to 'avr35' architecture.
	* devtools/gen-avr-lib-tree.sh (AVR_ARH_INFO): Add 'avr35' 
	architecture.
	(AVR3_DEV_INFO): Add AT90USB82 and AT90USB162 devices.
	(AVR35_DEV_INFO): New.
	(AVR5_DEV_INFO): Remove AT90USB82 and AT90USB162 devices.
	* doc/api/using-tools.dox: Document 'avr35'.

2007-12-20 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* NEWS: avr-libc 1.6 branched
	* configure.ac: bump to 1.7.0-20071220

2007-12-20 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* xml/patch-headers.py: Update for new devices and header files.
	* xml/Atmel2libc.py: More tweaks for strange Atmel XML files.
	* doc/api/vectortable.dox: Regenerate from XML.

2007-12-20 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/api/bench.dox: Some minor spelling and grammar fixes to
	Dmitry's fine benchmark page.

2007-12-20 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/api/faq.dox: Resolve all doxygen warnings except the "is
	not documented" ones.
	* doc/api/library.dox: (Ditto.)
	* doc/api/overview.dox: (Ditto.)
	* doc/api/porting.dox: (Ditto.)
	* doc/api/tools-install.dox: (Ditto.)
	* doc/examples/stdiodemo/stdiodemo.dox: (Ditto.)
	* include/avr/fuse.h: (Ditto.)
	* include/avr/lock.h: (Ditto.)
	* include/util/atomic.h: (Ditto.)

2007-12-20 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	bug #21484: Documentation build for avr/version.h does not
	susbstitute autoconf macros
	* doc/api/doxygen.config.in (INPUT): replace version.h.in by
	version.h so the doxygen build uses the processed file.

2007-12-19  Dmitry Xmelkov  <dmix@gmail.ru>

	* include/stdlib.h: Add '__' prefix with function args.

	* include/string.h: Add '__' prefix with function args. The ffs(),