@@ -3,9 +3,16 @@
 #ifdef	__AVR__
 
 # include <avr/pgmspace.h>
-# define pgm_read_qword(addr)			\
-    (  (0xffffffff & pgm_read_dword(addr))	\
-     | ((long long)pgm_read_dword((void *)(addr) + 4) << 32) )
+
+# define pgm_read_qword(addr)	({			\
+    union {						\
+	unsigned long __dw[2];				\
+	unsigned long long __qw[1];			\
+    } __u;						\
+    __u.__dw[0] = pgm_read_dword (addr);		\
+    __u.__dw[1] = pgm_read_dword ((void *)addr + 4);	\
+    __u.__qw[0];					\
+  })
 
 #else
 
