@@ -1,3 +1,7 @@
+2007-12-23  Dmitry Xmelkov  <dmix@gmail.ru>
+
+	* tests/simulate/progmem.h: Simplify pgm_read_qword() evaluation.
+
 2007-12-20 Joerg Wunsch <j.gnu@uriah.heep.sax.de>
 
 	bug #21862: File 'bench-libm.dox' does not exist in distribution
